@startuml

abstract class SafetyMetrics {
  +TrafficTimes trafficTime
  +WeekDays weekDay
  +Integer year
  +String riskColor
  +int numberOfRides
  +int numberOfIncidents
  +int numberOfScaryIncidents
  +float riskScore
  +int numberOfClosePasses
  +int numberOfPullInOuts
  +int numberOfNearLeftRightHooks
  +int numberOfHeadOnApproaches
  +int numberOfTailgating
  +int numberOfNearDoorings
  +int numberOfObstacleDodges
}

class SafetyMetricsPlanetOsmLine {
}

SafetyMetrics <|-- SafetyMetricsPlanetOsmLine

class PlanetOsmLine {
  +long osmId
  +Geometry way
  +String highway
  +String name
  +Instant lastModified
  +Instant lastAnalysed
}

class RideEntity {
  +Long id
  +Date rideStart
  +Date rideEnd
  +String path
}

class RideIncident {
  +Long id
  +BikeType bike
  +PhoneLocation phoneLocation
  +IncidentType incidentType
  +String description
  +boolean scary
  +List<ParticipantType> participantsInvolved
  +Date timeStamp
}

PlanetOsmLine "1" -- "0..*" SafetyMetricsPlanetOsmLine
PlanetOsmLine "1" -- "0..*" RideIncident
PlanetOsmLine "1" -- "0..*" RideEntity
RideEntity "0..*" -- "0..*" RideIncident

@enduml
